feat(api): semantic OpenAPI contract for match, actions, and errors
Normalize match to MatchResponseDto, type smart-action parse results with discriminated unions, and add RFC 7807 problem type/code URIs; include roster notes and Redis URI fixes.